--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "cssnano": "^4.1.10",
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.32.6"
   },
   "dependencies": {
