--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build index.html",
-    "dev": "parcel index.html"
+    "build": "parcel build index.html --https",
+    "dev": "parcel index.html --https"
   },
   "keywords": [],
   "author": "",
